renew all, view book

--- a/API_Book/ASP_Book_API/WebApplication1/appsettings.json
+++ b/API_Book/ASP_Book_API/WebApplication1/appsettings.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "Database": "Data Source=LAPTOP-4N02CR39;Initial Catalog=BOOKSTORE;User ID=sa1;Password=svcntt;TrustServerCertificate=True"
+    "Database": "Data Source=LAPTOP-H5ERPF91;Initial Catalog=BOOKSTORE;User ID=sa1;Password=svcntt;TrustServerCertificate=True"
   },
 
   "AllowedHosts": "*",
