--- a/Book-store-Reactjs/package.json
+++ b/Book-store-Reactjs/package.json
@@ -12,13 +12,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^1.4.0",
     "bootstrap": "^5.0.1",
     "gh-pages": "^3.2.0",
-    "jwt-decode": "^3.1.2",
     "mdbreact": "^5.0.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.6.1",
-    "react-cookie": "^4.1.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.11.5",
     "react-responsive-carousel": "^3.2.18",
@@ -26,12 +25,11 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-stripe-elements": "^6.1.2",
-    "semantic-ui-react": "^2.0.1",
-    "universal-cookie": "^4.0.4"
+    "semantic-ui-react": "^2.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
