add login but not security

--- a/API_Book/ASP_Book_API/BookStoreApi/appsettings.json
+++ b/API_Book/ASP_Book_API/BookStoreApi/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "database": "Server=LAPTOP-H5ERPF91;Database=BOOKSTORE;User Id=sa2;Password=svcntt;TrustServerCertificate=True"
+  },
+  "JWT": {
+    "ValidAudience": "http://localhost:3000",
+    "ValidIssuer": "http://localhost:3000",
+    "Secret": "ProjectBookstore"
   }
 }
