--- a/Book-store-Reactjs/package.json
+++ b/Book-store-Reactjs/package.json
@@ -15,17 +15,21 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.0.1",
     "gh-pages": "^3.2.0",
+    "jwt-decode": "^3.1.2",
     "mdbreact": "^5.0.2",
+    "next-router": "^1.3.6",
     "react": "^16.13.1",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.11.5",
     "react-responsive-carousel": "^3.2.18",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "3.4.3",
     "react-stripe-elements": "^6.1.2",
-    "semantic-ui-react": "^2.0.1"
+    "react-toastify": "^8.0.0",
+    "semantic-ui-react": "^2.0.1",
+    "universal-cookie": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
