--- a/Book-store-Reactjs/package.json
+++ b/Book-store-Reactjs/package.json
@@ -13,15 +13,16 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^1.4.0",
-    "bootstrap": "^5.0.1",
+    "bootstrap": "^5.2.3",
     "gh-pages": "^3.2.0",
     "jwt-decode": "^3.1.2",
     "mdbreact": "^5.0.2",
     "next-router": "^1.3.6",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.6.1",
+    "react-bootstrap": "^1.6.7",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.11.5",
+    "react-query": "^3.39.3",
     "react-responsive-carousel": "^3.2.18",
     "react-router": "^5.2.0",
     "react-router-dom": "^6.11.1",
