using repository and add payment

--- a/API_Book/ASP_Book_API/BookStoreApi/appsettings.json
+++ b/API_Book/ASP_Book_API/BookStoreApi/appsettings.json
@@ -7,11 +7,22 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "database": "Server=LAPTOP-H5ERPF91;Database=BOOKSTORE;User Id=sa2;Password=svcntt;TrustServerCertificate=True"
+    "database": <Your_SERVER>
   },
   "JWT": {
     "ValidAudience": "http://localhost:3000",
     "ValidIssuer": "http://localhost:3000",
     "Secret": "ProjectBookstore"
+  },
+  "GHN": {
+    "link": "https://online-gateway.ghn.vn/shiip/public-api/v2/shipping-order",
+    "token": <TOKEN>,
+    "shopId": <ID>
+  },
+  "PayPal": {
+    "link": "https://api-m.sandbox.paypal.com",
+    "username": <USERNAME>,
+    "password": <PASSWORD>,
+    "returnPath": <WEBRETURN>
   }
 }
