--- a/Book-store-Reactjs/package.json
+++ b/Book-store-Reactjs/package.json
@@ -3,15 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chec/commerce.js": "^2.3.0-beta1",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@stripe/react-stripe-js": "^1.1.2",
-    "@stripe/stripe-js": "^1.11.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "gh-pages": "^3.2.0",
@@ -27,6 +20,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "3.4.3",
+    "react-select": "^5.7.3",
     "react-stripe-elements": "^6.1.2",
     "react-toastify": "^8.0.0",
     "semantic-ui-react": "^2.0.1",
